libapache2-mod-chxj (0.8.6-1) unstable; urgency=low

  * Added error messages
    - the error message of the parsing machine of HTML.
    - the error message when the character-code is converted.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Wed, 12 Mar 2008 01:49:16 +0900

libapache2-mod-chxj (0.8.5-1) unstable; urgency=low

  * Fixed Bug
    - when the image of non-correspondence is converted, and aborted.
  * Changed features.
    - Being able to convert the image changed only to jpeg, png, and gif.

 -- Atsushi Konno <konn@users.sorceforge.jp>  Thu, 14 Feb 2008 20:53:02 +0900

libapache2-mod-chxj (0.8.4-1) unstable; urgency=low

  * Fixed Bug that deb package doesn't correspond to Apache2.2.
  * Added features:
    - ``ChxjImageCacheLimit'' directive.
    - The serial number of "image workfile name" is deleted. 
  * Added Document:
    ``ChxjImageCacheLimit'' directive.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Tue,  5 Feb 2008 20:33:16 +0900

libapache2-mod-chxj (0.8.3-1) unstable; urgency=high

  * Fixed Bug
    - The image conversion is not operated at the access by PC.
    - Bug that doesn't delete cache file.
      + default limit size is 10MByte.
        but the setting cannot be changed now.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon,  4 Feb 2008 12:53:21 +0900

libapache2-mod-chxj (0.8.2-1) unstable; urgency=low

  * Fixed Bug to which compile error occurs when A is specified.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Sun,  3 Feb 2008 01:40:33 +0900

libapache2-mod-chxj (0.8.1-1) unstable; urgency=low

  * Changed for Apache 2.2.x.
  * Changed so that ``Configure'' might run well by CentOS5.1. 
  * Fixed bug that Segmentation Falt had occurred when browser inforamtion was 
    read in the AMD64 environment. 
  * Fixed bug that the HTML conversion operates when connecting it from PC. 
  * Fixed bug that the HTML conversion for jhtml.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900
